# Agentic-Honey-Pot

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FRONTEND_PROMPTS.md  FRONTEND_PROMPTS_CONCISE.md  HACKATHON_SUBMISSION.md  LICENSE  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  TEAM_SETUP_GUIDE.txt  WINNING_SUMMARY.md  docker-compose.yml  fix-imports.ps1  pyproject.toml  render.yaml  requirements.txt  test_output.txt  test_verification.py
.github/workflows/: ci.yml  keep-alive.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/agent/: __init__.py  decision_engine.py  orchestrator.py  state_machine.py
app/api/: __init__.py  debug.py
app/api/v1/: __init__.py  analytics.py  hackathon.py  (+4 more)
app/conversation/: __init__.py
app/db/: __init__.py  database.py  models.py
app/intelligence/: __init__.py  aggregator.py  extractor.py  patterns.py  validators.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  conversation.py  errors.py  intelligence.py  requests.py  responses.py  session.py
app/personas/: __init__.py  base.py  busy_professional.py  eager_investor.py  elderly_victim.py  helpful_auntie.py  manager.py  tech_novice.py
app/scam_detection/: __init__.py  detector.py
app/services/: __init__.py  groq_client.py  guvi_callback.py
app/utils/: __init__.py
data/: personas.json  scam_patterns.json
docs/: API_DOCUMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  BACKEND_DEVELOPMENT.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  FRONTEND_DEVELOPMENT.md  GLOSSARY.md  OVERVIEW.md  PROJECT_STRUCTURE.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  index.md
frontend/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FIX_ASCHILD_ERRORS.md  README.md  components.json  docker-compose.yml  find-aschild-errors.ps1  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/components/: index.ts  theme-toggle.tsx
frontend/lib/: config.ts  constants.ts  utils.ts
frontend/public/: manifest.json  robots.txt
frontend/types/: analytics.ts  api.ts  chat.ts  common.ts  dashboard.ts  filters.ts  index.ts  intelligence.ts  message.ts  session.ts  websocket.ts
prompts/personas/: busy_professional.txt  eager_investor.txt  elderly_victim.txt  helpful_auntie.txt  tech_novice.txt
prompts/system/: intel_extractor.txt  response_generator.txt  scam_detector.txt
scripts/: debug_analytics.py  debug_groq.py  generate_scenarios.py  keep_alive.py  quick_test.py  test_optimizations.py  test_with_scenarios.py  verify_api.py  verify_before_evaluation.py  verify_db.py  verify_production.py
tests/: __init__.py  conftest.py  test_scenarios.json
(+250 files in other folders)
